tests/ui/once_convert_rejected.stderr
error: `convert` is not supported on `#[once]`; `#[once]` stores a single value for all arguments and has no per-call cache key to convert
 --> tests/ui/once_convert_rejected.rs:4:4
  |
4 | fn f(a: i32) -> i32 {
  |    ^
